--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Newco</string>
+
+    <string name="text_field_email_address_label">Email Address</string>
+    <string name="text_field_email_address_hint">e.g. username@newco.com</string>
+    <string name="text_field_password_label">Password</string>
+    <string name="text_field_password_hint">e.g. Secr3t_P4ssw@rd!</string>
 </resources>
